# b3tc

./: .gitignore
ass1/: Main.hs  ass1.cabal
ass1/examples/: custom.ics  custom2.ics
ass2/: Arrow.hs  Language.hs  Parser.hs  Parser.y  Scanner.hs  Scanner.x  ass2.cabal
ass2/examples/: Add.arrow  AddInput2.space  Simple.arrow
ass3/: ass3.cabal  example.cs
ass3/src/: CSharpAlgebra.hs  CSharpCode.hs  CSharpGram.hs  CSharpLex.hs  Main.hs  SSM.hs
