cabal-version:       >= 1.10 

name:                ass1
version:             0.1.0.0
build-type:          Simple

executable ass1
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , uu-tc
    , boxes
  default-language: Haskell2010
