cabal-version:       >= 1.10 

name:                ass2
version:             0.1.0.0
build-type:          Simple

executable Arrow
  main-is: Arrow.hs
  build-tools: happy, alex
  other-modules: Language
  -- other-extensions: 
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5,
      uu-tc,
      containers
  default-language: Haskell2010

library
  build-depends: base >= 3 && < 5
                 , array
  exposed-modules: Language, Scanner, Parser
  ghc-options: -Wall
  default-language: Haskell2010
