cabal-version:       >= 1.10 
name:                ass2
version:             0.1.0.0
build-type:          Simple

executable Main
  main-is: Arrow.hs
  build-tools: happy, alex
  other-modules: Language, Scanner, Parser
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5,
      uu-tc,
      array,
      containers,
      directory
  default-language: Haskell2010
