cabal-version:       >= 1.10 
name:                ass3
version:             0.1.0.0
build-type:          Simple

executable Main
  main-is: Main.hs
  hs-source-dirs: src
  build-tools: happy, alex
  other-modules: CSharpAlgebra, CSharpCode, CSharpGram, CSharpLex, SSM
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && <5,
      uu-tc,
      containers,
      filepath
  default-language: Haskell2010
